--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StudySync",
+  "name": "TripTale",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
-    "firebase": "^11.7.3",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.16.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
