--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sweetalert2/theme-dark": "^5.0.27",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-query": "^5.81.5",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "firebase": "^11.10.0",
