--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@sweetalert2/theme-dark": "^5.0.27",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.81.5",
