--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -32,6 +33,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-tabs": "^6.1.0",
     "react-tooltip": "^5.29.0",
+    "react-use": "^17.6.0",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.7"
