--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-confetti": "^6.4.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-share": "^5.2.2",
