--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "react-select": "^5.10.2",
     "react-share": "^5.2.2",
     "react-simple-typewriter": "^5.0.1",
     "react-tabs": "^6.1.0",
