--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.82.0",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
     "framer-motion": "^12.16.0",
     "lottie-react": "^2.4.1",
