--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-tabs": "^6.1.0",
     "react-tooltip": "^5.29.0",
     "react-use": "^17.6.0",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.7"
