--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-tooltip": "^5.29.0",
     "react-use": "^17.6.0",
     "recharts": "^3.1.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.7"
