--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@sweetalert2/theme-dark": "^5.0.27",
-    "@tailwindcss/vite": "^4.1.7",
+    "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.82.0",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
     "framer-motion": "^12.16.0",
@@ -45,7 +49,8 @@
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.10",
-    "tailwindcss": "^4.1.7"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -57,6 +62,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tw-animate-css": "^1.3.7",
     "vite": "^6.3.5"
   }
 }
